--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
 </table>
     
-<img src="/Images/Miami-750x422.jpeg" alt="Miami Beach Image" style="width:925px; height:500px;">  
+<img src="Images/Miami-750x422.jpeg" alt="Miami Beach Image" style="width:925px; height:500px;">  
 
 <br> 
 <br>
