--- a/mykitchen.html
+++ b/mykitchen.html
@@ -28,7 +28,7 @@
 
 </table>
 
-<img src="/Images/Southern Fried Chicken and Waffles.jpeg" style="width:925px; height:550px;">
+<img src="Images/Southern Fried Chicken and Waffles.jpeg" style="width:925px; height:550px;">
 
 <h2>Southern Food For The Soul</h2>
 <p> Nothing makes the your heart melt more than a good meal. Thats why in my kitchen a good ole southern meal and souther hospitality is sure to bring a crowd. With recipes passed down from southern grandparents and deep rooted with love, one of my favorite dishes to cook is a seafood shrimp and grits. 
